--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html5video": "^2.5.1",
     "react-qr-code": "^2.0.11",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
